--- a/html/main.css
+++ b/html/main.css
@@ -1,8 +1,36 @@
 /**
  * Layout
  */
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 html, body {
     margin: 0;
+}
+section {
+    overflow: hidden;
+    margin: 2.25em 0 4em;
+    padding: 2em 0 4em;
+}
+.main-col {
+    max-width: 40em;
+    margin: 0 auto;
+    padding: 0 1em;
+}
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    background: #000;
+    width: 100%;
+    margin: 2em 0;
+    padding: 0;
+}
+footer {
+    margin: 4em 0 2em;
 }
 
 /**
@@ -22,11 +50,34 @@ body {
     background: #fff;
     color: #222;
 }
+input {
+    font-family: 'glacial_cl', sans-serif;
+}
 h1, h2, h3, h4 {
     font-weight: normal;
 }
+.h1 {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+}
+.h2 {
+    font-size: 1.5em;
+    margin: 0.25em 0 0.5em;
+}
+p, li, dd {
+    line-height: 1.3;
+}
+dd {
+    margin: 0 0 1.5em;
+}
+small {
+    font-size: 0.75em;
+}
 .text-muted {
     color: #878d96 !important;
+}
+.border-image {
+    border: 1px solid #000;
 }
 
 /**
@@ -38,6 +89,38 @@ input[type="email"] {
     width: 100%;
     border: 1px solid #222;
     padding: 0.5em 0.25em;
+    margin: 0.5em 0 0;
+}
+form .btn {
+    margin-top: 1em;
+}
+.btn {
+    background: #cecfd3;
+    border: 0;
+    border-radius: 1em;
+    margin: 0.5em 0;
+    padding: 0.5em 1em;
+    width: 100%;
+    font-size: 1em;
+    text-align: center;
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+    background-color: #bcbec0;
+}
+.btn.btn-half {
+    width: 49%;
+    margin-left: 0;
+    margin-right: 2%;
+    min-width: 11.45em;
+}
+.btn.btn-half:nth-child(2n+1) {
+    margin-right: 0;
 }
 
 /**
@@ -281,20 +364,38 @@ img {
     position: relative;
 }
 .carousel-control {
-    position: absolute;
     display: none;
-    top: 0;
-    bottom: 0;
-    width: 1em;
 }
 .carousel.active .carousel-control {
     display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 1.75em;
+    border: 0;
+    background-color: #fff;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+.carousel.active .carousel-control:hover,
+.carousel.active .carousel-control:active,
+.carousel.active .carousel-control:focus {
+    border: 0;
+    outline: none;
+    opacity: 0.6;
+}
+.carousel button::-moz-focus-inner {
+    border:0;
 }
 .carousel-control.next {
-    right: 0;
+    right: -1em;
+    background-image: url('images/arrow-next.png');
 }
 .carousel-control.back {
-    left: 0;
+    left: -1em;
+    background-image: url('images/arrow-back.png');
 }
 .carousel-content {
     padding: 0;
@@ -320,8 +421,8 @@ img {
 }
 .logo-list li {
     display: inline-block;
-    width: 10em;
-    padding: 0 1em;
+    width: 8em;
+    padding: 0 0.25em;
     vertical-align: middle;
 }
 .logo-list li:first-child {
@@ -335,13 +436,14 @@ img {
     padding: 0;
     text-align: center;
     list-style: none;
+    margin: 0 -0.75em;
 }
 .data-category-list li {
     display: inline-block;
     vertical-align: bottom;
     width: 9em;
     height: 9em;
-    margin: 0.5em;
+    margin: 0.375em;
     padding: 0.1em;
 }
 .data-category-list .category {
