--- a/frontend/main.css
+++ b/frontend/main.css
@@ -13,6 +13,7 @@ body {
     font-family: 'glacial_cl', sans-serif;
     background: #fff;
     color: #222;
+    min-width: 40em; /* jumbotron */
 }
 .h2 {
     font-family: 'glacial_cl', sans-serif;
@@ -34,7 +35,7 @@ p {
  */
 main.beta {
     position: absolute;
-    top: 122px;
+    top: 114px; /* 32px banner + 82px header */
     bottom: 0;
     left: 0;
     right: 0;
@@ -125,6 +126,7 @@ hr {
  */
 .beta-banner {
     width: 100%;
+    height: 32px;
     padding: 0.25em 1em;
     background: #c57d00;
     color: #fff;
@@ -146,6 +148,7 @@ hr {
  */
 .main-header {
     display: block;
+    height: 82px;
     text-decoration: none;
     border-bottom: 3px solid #222;
 }
