--- a/frontend/main.css
+++ b/frontend/main.css
@@ -12,10 +12,11 @@ html,
 body {
     background: #fff;
     color: #222;
-    min-width: 40em; /* jumbotron */
+}
+.h1, .h2, .h3, .h4, .h5 {
+    font-family: 'glacial_cl', sans-serif;
 }
 .h2 {
-    font-family: 'glacial_cl', sans-serif;
     font-weight: normal;
     margin: 0;
 }
@@ -34,11 +35,17 @@ pre {
  * Main Layout
  */
 main.beta {
-    position: absolute;
-    top: 114px; /* 32px banner + 82px header */
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    min-height: 35rem;
+}
+@media (min-width: 768px){
+    main.beta {
+        position: absolute;
+        top: 114px; /* 32px banner + 82px header */
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 }
 #map {
     position: absolute;
@@ -59,13 +66,20 @@ main.beta {
     overflow-y: auto;
 }
 .welcome-float {
-    z-index: 10000;
     position: absolute;
-    left: 50%;
-    margin-left: -20em;
-    width: 40em;
-    top: 1em;
-    background-color: rgba(255,255,255,0.8);
+    z-index: 10000;
+    top: 0;
+    width: 100%;
+    border-radius: 0;
+    background-color: rgba(255,255,255,0.95);
+}
+@media (min-width: 768px){
+    .welcome-float {
+        left: 50%;
+        margin-left: -20em;
+        width: 40em;
+        top: 1em;
+    }
 }
 
 /**
@@ -96,7 +110,7 @@ hr {
  */
 .beta-banner {
     width: 100%;
-    height: 32px;
+    min-height: 32px;
     padding: 0.25em 1em;
     background: #c57d00;
     color: #fff;
@@ -118,7 +132,7 @@ hr {
  */
 .main-header {
     display: block;
-    height: 82px;
+    min-height: 82px;
     text-decoration: none;
     border-bottom: 3px solid #222;
 }
