--- a/frontend/main.css
+++ b/frontend/main.css
@@ -54,7 +54,7 @@ main.beta {
     left: 0;
     right: 0;
 }
-#legend {
+.info-container {
     position: absolute;
     top: 50%;
     left: 0;
@@ -65,6 +65,11 @@ main.beta {
     background-color: rgba(255,255,255,0.95);
     z-index: 1000;
     overflow-y: auto;
+    transform: translateX(0);
+    transition: transform 0.4s;
+}
+.info-container.offscreen {
+    transform: translateX(-100%);
 }
 .leaflet-container .leaflet-control-attribution {
     width: 100%;
@@ -76,7 +81,7 @@ main.beta {
     left: 0;
 }
 @media (min-width: 380px){
-    #legend {
+    .info-container {
         bottom: 2rem;
     }
     .leaflet-container .leaflet-control-attribution {
@@ -84,11 +89,14 @@ main.beta {
     }
 }
 @media (min-width: 768px){
-    #legend {
+    .info-container {
         top: 0;
         left: 0;
         width: 20rem;
         bottom: 0;
+    }
+    .info-container.offscreen {
+        transform: translateX(-20rem);
     }
     .leaflet-right{
         left: 20rem;
@@ -105,6 +113,14 @@ main.beta {
     border-radius: 0;
     background: #fff;
     background-color: rgba(255,255,255,0.95);
+    opacity: 1;
+    transition: opacity 0.4s;
+}
+.welcome-float.offscreen {
+    opacity: 0;
+}
+.welcome-float.remove {
+    display: none;
 }
 @media (min-width: 768px){
     .welcome-float {
