--- a/frontend/main.css
+++ b/frontend/main.css
@@ -41,10 +41,11 @@ main.beta {
 @media (min-width: 768px){
     main.beta {
         position: absolute;
-        top: 114px; /* 32px banner + 82px header */
+        top: 117px; /* 32px banner + 82px header + 3px border */
         bottom: 0;
         left: 0;
         right: 0;
+        min-height: auto;
     }
 }
 #map {
@@ -160,6 +161,7 @@ hr {
 .beta-banner {
     width: 100%;
     min-height: 32px;
+    font-size: 0.8333rem;
     padding: 0.25em 1em;
     background: #c57d00;
     color: #fff;
@@ -197,7 +199,7 @@ hr {
  */
  .logo {
     display: block;
-    font-size: 2em;
+    font-size: 1.8rem;
     width: 6em;
     padding: 0;
     text-transform: uppercase;
@@ -460,8 +462,42 @@ small {
 .bullet-prefix.toggled-on::before {
     background-color: #222;
 }
+.tooltip-hook {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    color: #222;
+    background: #fff;
+    border: 1px solid #222;
+    width: 22px;
+    height: 22px;
+    border-radius: 11px;
+    padding: 0 0 0 1px;
+    font-size: 0.8rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+}
+.tooltip {
+    display: none;
+    opacity: 1;
+    min-width: 11em;
+    left: -3px;
+    top: 25px;
+}
+.tooltip .arrow {
+    left: 5px;
+}
+.tooltip-hook:hover .tooltip,
+.tooltip-hook:hover + .tooltip {
+    display: block;
+    opacity: 1;
+}
 .data-section .h3 {
     margin: 0;
+}
+.data-intro {
+    padding-left: 1.5rem;
+    font-size: 0.8333rem;
 }
 .data-list {
     margin: 0rem 0 1rem;
