--- a/app/src/frontend/sidebar.css
+++ b/app/src/frontend/sidebar.css
@@ -10,6 +10,11 @@
     z-index: 1000;
     overflow-y: auto;
 }
+.info-container .h2:first-child {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+    margin-left: -0.1em;
+}
 .leaflet-container .leaflet-control-attribution {
     width: 100%;
     height: 3rem;
