Update beta banner text (test site)

--- a/app/src/frontend/beta-banner.css
+++ b/app/src/frontend/beta-banner.css
@@ -5,8 +5,8 @@
     width: 100%;
     min-height: 32px;
     font-size: 0.8333rem;
-    padding: 0.25em 1em;
-    background: #505050;
+    padding: 0.333rem 0.8333rem;
+    background: #707070;
     color: #fff;
     margin: 0;
 }
