--- a/app/src/frontend/main.css
+++ b/app/src/frontend/main.css
@@ -12,24 +12,49 @@
     padding-left: 17px;
 }
 .bullet-prefix {
-    position: relative;
-    padding: 0rem 0.5rem 0.5rem 1.5rem;
-    cursor: pointer;
-}
-.bullet-prefix::before {
     display: block;
-    position: absolute;
-    left: 0px;
-    top: 6px;
-    width: 10px;
-    height: 10px;
-    background-color: #7d7d7d;
-    content: ' ';
+    position: relative;
+    padding: 0.5rem 0.5rem 0.5rem 2.25rem;
+    cursor: pointer;
+    text-decoration: none;
+    color: #222;
     transition: background-color 0.2s;
 }
+.bullet-prefix h3 {
+    display: inline-block;
+}
+.bullet-prefix.active,
+.bullet-prefix:hover {
+    color: #222;
+    text-decoration: none;
+    background-color: #eeeeee;
+}
+.bullet-prefix::before {
+    display: inline-block;
+    position: absolute;
+    left: 0.75rem;
+    top: 0.25rem;
+    width: 1rem;
+    height: 1rem;
+    text-align: center;
+    vertical-align: middle;
+    color: #7d7d7d;
+    font-size: 1.2rem;
+    content: '\25A0';
+    transition: color 0.2s;
+}
 .bullet-prefix:hover::before,
-.bullet-prefix.toggled-on::before {
-    background-color: #222;
+.bullet-prefix.active::before {
+    color: #222;
+}
+.bullet-prefix:hover::before {
+    content: '\25BC';
+}
+.bullet-prefix.active:hover::before {
+    content: '\25A0';
+}
+.data-section {
+    border-top: 1px solid #ffffff;
 }
 .data-section .h3 {
     margin: 0;
@@ -39,8 +64,8 @@
     font-size: 0.8333rem;
 }
 .data-list {
-    margin: 0rem 0 1rem;
-    padding-left: 1.5rem;
+    margin: 0;
+    padding-left: 2.25rem;
 }
 .data-list a {
     color: #555;
@@ -52,7 +77,7 @@
 }
 .data-list dt,
 .data-section label {
-    margin: 0;
+    margin: 0.5em 0 0;
     font-size: 0.8333rem;
     font-weight: normal;
     text-transform: uppercase;
@@ -72,8 +97,11 @@
 }
 .data-legend .key {
     display: inline-block;
-    width: 10px;
-    height: 10px;
+    width: 1em;
+    height: 1em;
+    text-indent: -30px;
+    margin-right: 0.2em;
+    vertical-align: text-bottom;
     overflow: hidden;
 }
 
