--- a/app/src/frontend/sidebar.css
+++ b/app/src/frontend/sidebar.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 3rem;
-    padding: 0.25em 0.75em;
+    padding: 0.25em 0em;
     background: #fff;
     background-color: rgba(255,255,255,0.95);
     z-index: 1000;
@@ -14,6 +14,7 @@
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
     margin-left: -0.1em;
+    padding: 0 0.75rem;
 }
 .leaflet-container .leaflet-control-attribution {
     width: 100%;
