Include all categories and form sections
- coming soon if inactive [Closes #30]
- update section titles [Closes #52]
- add size fields [Closes #39]

--- a/app/src/frontend/main.css
+++ b/app/src/frontend/main.css
@@ -14,7 +14,7 @@
 .bullet-prefix {
     display: block;
     position: relative;
-    padding: 0.5rem 0.5rem 0.5rem 2.25rem;
+    padding: 0.6rem 0.5rem 0.5rem 2.25rem;
     cursor: pointer;
     text-decoration: none;
     color: #222;
@@ -32,9 +32,9 @@
 .bullet-prefix::before {
     display: inline-block;
     position: absolute;
-    left: 0.75rem;
-    top: 0.25rem;
-    width: 1rem;
+    left: 0.55rem;
+    top: 0.3rem;
+    width: 1.2rem;
     height: 1rem;
     text-align: center;
     vertical-align: middle;
@@ -56,16 +56,29 @@
 .data-section {
     border-top: 1px solid #ffffff;
 }
+.data-section.inactive {
+    opacity: 0.7;
+}
+.data-section.inactive .bullet-prefix::before {
+    opacity: 0.4;
+}
 .data-section .h3 {
     margin: 0;
 }
 .data-intro {
-    padding-left: 1.5rem;
+    padding-left: 0.75rem;
     font-size: 0.8333rem;
+    margin-top: 0.25rem;
 }
 .data-list {
     margin: 0;
+    padding-left: 0.75rem;
+}
+.legend .data-list {
     padding-left: 2.25rem;
+}
+.data-section form {
+    padding: 0 0.75rem;
 }
 .data-list a {
     color: #555;
@@ -83,8 +96,7 @@
     text-transform: uppercase;
     color: #555;
 }
-.data-list dd,
-.data-list input {
+.data-list dd {
     margin: 0 0 0.5rem;
     line-height: 1.5;
 }
