--- a/app/src/frontend/tooltip.css
+++ b/app/src/frontend/tooltip.css
@@ -1,30 +1,24 @@
-.tooltip-hook {
-    display: inline-block;
-    position: relative;
+.tooltip-hint {
     cursor: pointer;
-    color: #222;
-    background: #fff;
-    border: 1px solid #222;
-    width: 22px;
-    height: 22px;
-    border-radius: 11px;
-    padding: 0 0 0 1px;
-    font-size: 0.8rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
+}
+.tooltip-wrap {
+    float: right;
+    position: relative;
+    top: -5px;
+}
+.tooltip-wrap .icon-button svg {
+    width: 1rem;
+    height: 1rem;
+    margin-top: -2px;
 }
 .tooltip {
-    display: none;
+    text-transform: none;
+    text-align: left;
+    width: 11em;
+    right: 0;
+    top: 27px;
     opacity: 1;
-    min-width: 11em;
-    left: -3px;
-    top: 25px;
 }
 .tooltip .arrow {
-    left: 5px;
-}
-.tooltip-hook:hover .tooltip,
-.tooltip-hook:hover + .tooltip {
-    display: block;
-    opacity: 1;
+    right: 7px;
 }
