--- a/app/src/frontend/sidebar.css
+++ b/app/src/frontend/sidebar.css
@@ -101,12 +101,13 @@
     text-align: center;
     color: #7d7d7d;
     font-size: 1.2rem;
-    content: '\25A0';
+    content: '\25B8';
     transition: color 0.2s;
 }
 .bullet-prefix:hover > a::before,
 .bullet-prefix.active > a::before {
     color: #222;
+    font-size: 1.1rem;
 }
 .bullet-prefix:hover > a::before {
     content: '\25BC';
