--- a/app/src/frontend/sidebar.css
+++ b/app/src/frontend/sidebar.css
@@ -40,11 +40,11 @@
     .info-container {
         top: 0;
         left: 0;
-        width: 20rem;
+        width: 25rem;
         bottom: 0;
     }
     .leaflet-right{
-        left: 20rem;
+        left: 25rem;
     }
     #root .leaflet-container .leaflet-control-attribution {
         height: auto;
@@ -136,31 +136,44 @@
  */
 .icon-button {
     display: inline-block;
-    width: 1.8rem;
-    height: 1.8rem;
-    padding: 0;
+    background-color: transparent;
+    font-size: 0.8333rem;
+
     outline: none;
     border: none;
-    border-radius: 0.9rem;
-    margin: 0 0.05rem;
-
-    background-color: transparent;
-    transition: background-color 0.2s;
 
     color: #222;
     vertical-align: top;
-    text-align: center;
+}
+.icon-button:hover {
+    color: #222;
+    text-decoration: none;
+}
+
+.icon-button.tooltip-hint {
+    padding: 0;
 }
 .icon-button svg {
-    transition: color 0.2s;
+    background-color: transparent;
+    transition: background-color color 0.2s;
+    display: inline-block;
+
     color: #222;
     margin-top: 2px;
-    width: 1rem;
-    height: 1rem;
+    width: 1.8rem;
+    height: 1.8rem;
+    padding: 0.4rem;
+    border-radius: 0.9rem;
+    margin: 0 0.05rem;
     display: inline-block;
     vertical-align: middle;
 }
-.icon-button:hover {
+.svg-inline--fa.fa-w-11,
+.svg-inline--fa.fa-w-16,
+.svg-inline--fa.fa-w-8 {
+    width: 1.8rem;
+}
+.icon-button:hover svg {
     background-color: #fff;
 }
 .icon-button.edit:hover svg {
@@ -173,10 +186,10 @@
 .icon-button.tooltip-hint:hover svg {
     color: rgb(255, 11, 245);
 }
-.icon-button.close svg {
+.icon-button.close-edit svg {
     margin-top: -1px;
 }
-.icon-button.close:hover svg {
+.icon-button.close-edit:hover svg {
     color: rgb(255, 72, 11)
 }
 .icon-button.save:hover svg {
@@ -185,6 +198,16 @@
 .section-header .icon-button {
     float: right;
     margin-top: -2px;
+}
+
+/* Back button */
+.icon-button.back,
+.icon-button.back:hover {
+    padding: 0;
+    background-color: transparent;
+}
+.icon-button.back:hover svg {
+    background-color: transparent;
 }
 
 /**
@@ -207,7 +230,7 @@
 .data-list {
     margin: 0;
     padding-left: 0.75rem;
-    padding-right: 0.5rem;
+    padding-right: 0.75rem;
 }
 .data-section form {
     padding: 0 0.75rem;
